Fix entries in the po and man Changelogs.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -24,21 +24,21 @@
 
 2006-09-11  KISE Hiroshi  <kise@fuyuneko.jp>
 
-	* man/po4a/add_ja/dpkg.1.ja.add: Recode the addendum in UTF-8.
-	* man/po4a/add_ja/dselect.1.ja.add: Likewise.
-	* man/po4a/add_ja/update-alternatives.8.ja.add: Likewise.
-	* man/po4a/add_ja/dpkg-deb.1.ja.add: Updated.
-	* man/po4a/dpkg.1/dpkg.1.cfg: Specify the po4a options for the
+	* po4a/add_ja/dpkg.1.ja.add: Recode the addendum in UTF-8.
+	* po4a/add_ja/dselect.1.ja.add: Likewise.
+	* po4a/add_ja/update-alternatives.8.ja.add: Likewise.
+	* po4a/add_ja/dpkg-deb.1.ja.add: Updated.
+	* po4a/dpkg.1/dpkg.1.cfg: Specify the po4a options for the
 	Japanese translation.
-	* man/po4a/dselect.1/dselect.1.cfg: Likewise.
-	* man/po4a/update-alternatives.8/update-alternatives.8.cfg:
+	* po4a/dselect.1/dselect.1.cfg: Likewise.
+	* po4a/update-alternatives.8/update-alternatives.8.cfg:
 	Likewise.
-	* man/po4a/dpkg.1/po/ja.po: Updated translation.
-	* man/po4a/dselect.1/po/ja.po: Likewise.
-	* man/po4a/update-alternatives.8/po/ja.po: Likewise.
-	* man/po4a/deb-control.5/po/ja.po: Likewise.
-	* man/po4a/dpkg-deb.1/po/ja.po: Likewise.
-	* man/po4a/start-stop-daemon.8/po/ja.po: Likewise.
+	* po4a/dpkg.1/po/ja.po: Updated translation.
+	* po4a/dselect.1/po/ja.po: Likewise.
+	* po4a/update-alternatives.8/po/ja.po: Likewise.
+	* po4a/deb-control.5/po/ja.po: Likewise.
+	* po4a/dpkg-deb.1/po/ja.po: Likewise.
+	* po4a/start-stop-daemon.8/po/ja.po: Likewise.
 
 2006-09-02  KISE Hiroshi  <kise@fuyuneko.jp>
 
@@ -105,9 +105,9 @@
 
 	* C/dpkg-architecture.1: Remove linux-alpha from the architecture
 	wildcard examples, and fix a formatting issue.
-	* man/po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot: Regenerated.
-	* man/po4a/dpkg-architecture.1/po/*.po: Merge with pot file.
-	* man/po4a/dpkg-architecture.1/po/fr.po: Update to 116t.
+	* po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot: Regenerated.
+	* po4a/dpkg-architecture.1/po/*.po: Merge with pot file.
+	* po4a/dpkg-architecture.1/po/fr.po: Update to 116t.
 
 2006-08-05  Helge Kreutzmann  <debian@helgefjell.de>
 
@@ -140,9 +140,9 @@
 	* C/dpkg-source.1: Typo fix.
 	* C/dpkg-architecture.1: Likewise.
 	* po4a/dpkg-source.1/po/dpkg-source.1.pot: Regenerated.
-	* man/po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot: Likewise.
-	* man/po4a/dpkg-source.1/po/*.po: Merge with pot file.
-	* man/po4a/dpkg-architecture.1/po/*.po: Likewise.
+	* po4a/dpkg-architecture.1/po/dpkg-architecture.1.pot: Likewise.
+	* po4a/dpkg-source.1/po/*.po: Merge with pot file.
+	* po4a/dpkg-architecture.1/po/*.po: Likewise.
 
 2006-08-02  Helge Kreutzmann  <debian@helgefjell.de>
 
@@ -205,16 +205,16 @@
 	* po4a/dpkg-statoverride.8/po/*.po: Merge with pot file.
 	Former completed translations become 42t2f.
 	* po4a/dpkg-source.1/po/fr.po: Merge strings used in multiple POs.
-	* man/po4a/dpkg.cfg.5/po/fr.po: Likewise.
+	* po4a/dpkg.cfg.5/po/fr.po: Likewise.
 	* po4a/cleanup-info.8/po/fr.po: Likewise.
-	* man/po4a/dpkg-query.1/po/fr.po: Likewise.
+	* po4a/dpkg-query.1/po/fr.po: Likewise.
 	* po4a/dpkg-checkbuilddeps.1/po/fr.po: Likewise.
 	* po4a/dpkg-scanpackages.1/po/fr.po: Likewise.
 	* po4a/dpkg-divert.8/po/fr.po: Likewise.
 	* po4a/update-alternatives.8/po/fr.po: Likewise.
 	* po4a/dpkg-statoverride.8/po/fr.po: Likewise.
 	* po4a/deb-control.5/po/fr.po: Likewise.
-	* man/po4a/dpkg-deb.1/po/fr.po: Likewise.
+	* po4a/dpkg-deb.1/po/fr.po: Likewise.
 
 2006-07-29  Helge Kreutzmann  <debian@helgefjell.de>
 
@@ -256,7 +256,7 @@
 	Former completed translations become 27t2f.
 	* po4a/dpkg-scansources.1/po/*.po: Likewise.
 	Typo unfuzzied.
-	* man/po4a/deb-old.5/po/de.po: Rewrap lines.
+	* po4a/deb-old.5/po/de.po: Rewrap lines.
 
 2006-07-25  Helge Kreutzmann  <debian@helgefjell.de>
 
@@ -313,8 +313,8 @@
 	Former completed translations become 112t4f.
 	* po4a/start-stop-daemon.8/po/*.po: Merge with pot file.
 	* po4a/update-alternatives.8/po/*.po: Likewise.
-	* man/po4a/dselect.cfg.5/po/de.po: Regenerated.
-	* man/po4a/dpkg.cfg.5/po/de.po: Likewise.
+	* po4a/dselect.cfg.5/po/de.po: Regenerated.
+	* po4a/dpkg.cfg.5/po/de.po: Likewise.
 
 2006-07-22  Helge Kreutzmann  <debian@helgefjell.de>
 
@@ -327,8 +327,8 @@
 	* po4a/add_de/dpkg.cfg.5.de.add: Addendum for the new translation.
 	* po4a/add_de/dselect.cfg.5.de.add: Likewise.
 	* po4a/add_de/update-alternatives.8.de.add: Updated addendum.
-	* man/po4a/dpkg.cfg.5/dpkg.cfg.5.cfg: Add the `de' language.
-	* man/po4a/dselect.cfg.5/dselect.cfg.5.cfg: Likewise.
+	* po4a/dpkg.cfg.5/dpkg.cfg.5.cfg: Add the `de' language.
+	* po4a/dselect.cfg.5/dselect.cfg.5.cfg: Likewise.
 
 2006-05-24  Philippe Batailler  <philippe.batailler@free.fr>
 
@@ -415,18 +415,18 @@
 
 2006-05-21  Nicolas Francois  <nicolas.francois@centraliens.net>
 
-	* man/*/*.po, man/C/po/*.pot, po4a/: Ease the work of i18n robots: make a
+	* */*.po, C/po/*.pot, po4a/: Ease the work of i18n robots: make a
 	directory for every manpage and move the POT and POs for a page in the
 	same directory.
 
 2006-05-18  Frank Lichtenheld  <djpig@debian.org>
 
-	* man/C/dpkg-query.1: Document that user defined
+	* C/dpkg-query.1: Document that user defined
 	fields can also be printed with --showformat.
 
 2006-05-17  Frank Lichtenheld  <djpig@debian.org>
 
-	* man/C/dpkg.1: We don't actually set
+	* C/dpkg.1: We don't actually set
 	DPKG_OLD_CONFFILE and DPKG_NEW_CONFFILE on subshells,
 	so we shouldn't claim to do so.
 
@@ -519,8 +519,8 @@
 	* ru/Makefile.am: Specify that the Russian manpages must be
 	generated in the KOI8-R charset and that the Russian addenda are
 	already encoded in KOI8-R.
-	* man/fr/dpkg-statoverride.8.fr.po: Fix an unmatched ">" or "<".
-	* man/ru/dpkg.1.ru.po: Likewise.
+	* fr/dpkg-statoverride.8.fr.po: Fix an unmatched ">" or "<".
+	* ru/dpkg.1.ru.po: Likewise.
 
 2006-04-10  Guillem Jover  <guillem@debian.org>
 
