2006-09-27  Ian Jackson  <iwj@ubuntu.com>
	* dselect/pkgdepcon.cc (packagelist::resolvedepcon): Recognise the
	dep_breaks dependency type in the dependency and conflict resolution.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-27  Ian Jackson  <iwj@ubuntu.com>
+
+	* dselect/pkgdepcon.cc (packagelist::resolvedepcon): Recognise the
+	dep_breaks dependency type in the dependency and conflict resolution.
+
 2006-08-10  Guillem Jover  <guillem@debian.org>
 
 	* dselect/helpmsgs.cc: Replace the comment header about the file being
