Add a new line at the end of m4/compiler.m4 file, to cope with an autoreconf failure due to the new m4 1.4.7.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-09-27  Guillem Jover  <guillem@debian.org>
+
+	* m4/compiler.m4: Add a new line at the end of the file, to cope with
+	an autoreconf failure due to the new m4 1.4.7.
+
 2006-09-27  Ian Jackson  <iwj@ubuntu.com>
 
 	* dselect/pkgdepcon.cc (packagelist::resolvedepcon): Recognise the
