Update the Basque translation to 920t.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-27  Piarres Beobide  <pi@beobide.net>
+
+	* eu.po: Updated to 920t.
+
 2006-09-19  Tenzin Dendup  <tdendup@dit.gov.bt>
 
 	* LINGUAS: Change the Dzongkha translation maintainer to
