--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-27  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* po4a/dpkg-scansources.1/po/de.po: Fix a typo.
+
 2006-09-23  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* po4a/start-stop-daemon.8/po/fr.po: Updated translation.
