Typo fix in C/dpkg-scansources.1, regenerate the POT and POs. And updated German translation.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,13 @@
+2006-09-30  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po4a/dpkg-scansources.1/po/de.po: Updated translation.
+
+2006-09-29  Nicolas Francois  <nicolas.francois@centraliens.net>
+
+	* C/dpkg-scansources.1: Fix a typo.
+	* po4a/dpkg-scansources.1/po/dpkg-scansources.1.pot: Regenerated.
+	* po4a/dpkg-scansources.1/po/*.po: Merge with pot file.
+
 2006-09-27  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* po4a/dpkg-scansources.1/po/de.po: Fix a typo.
