--- a/man/po4a/dpkg-scansources.1/po/dpkg-scansources.1.pot
+++ b/man/po4a/dpkg-scansources.1/po/dpkg-scansources.1.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-07-27 22:47+0200\n"
+"POT-Creation-Date: 2006-09-29  1:32+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -71,8 +71,8 @@ msgstr ""
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scansources.1:18
 msgid ""
-"\\&B<dpkg-scansources> scans the given I<binary-dir> for I<.dsc> files.  "
-"These are used to create a Debian source index, which is output to stdout."
+"B<dpkg-scansources> scans the given I<binary-dir> for I<.dsc> files.  These "
+"are used to create a Debian source index, which is output to stdout."
 msgstr ""
 
 # type: Plain text
@@ -102,7 +102,7 @@ msgstr ""
 msgid ""
 "B<Note:> If you want to access the generated Sources file with B<apt>(8)  "
 "you will probably need to compress the file with B<gzip>(1)  (generating a "
-"Source.gz file). apt ignores uncompressed Sources files except on local "
+"Sources.gz file). apt ignores uncompressed Sources files except on local "
 "access (i.e.  B<file://> sources)."
 msgstr ""
 
