--- a/man/po4a/dpkg-scansources.1/po/es.po
+++ b/man/po4a/dpkg-scansources.1/po/es.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-07-27 22:47+0200\n"
+"POT-Creation-Date: 2006-09-29  1:32+0200\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Spanish <debian-l10n-spanish@lists.debian.org>\n"
@@ -77,10 +77,10 @@ msgstr "DESCRIPCIÓN"
 #: ../../../man/po4a/../C/dpkg-scansources.1:18
 #, fuzzy
 msgid ""
-"\\&B<dpkg-scansources> scans the given I<binary-dir> for I<.dsc> files.  "
-"These are used to create a Debian source index, which is output to stdout."
+"B<dpkg-scansources> scans the given I<binary-dir> for I<.dsc> files.  These "
+"are used to create a Debian source index, which is output to stdout."
 msgstr ""
-"\\&B<dpkg-scansources> busca ficheros I<.dsc> en un árbol de directorios "
+"<dpkg-scansources> busca ficheros I<.dsc> en un árbol de directorios "
 "I<bindir> dado.  Estos son usados para crear un índice de Sources de Debian, "
 "que es mostrado por la salida estándar."
 
@@ -126,7 +126,7 @@ msgstr ""
 msgid ""
 "B<Note:> If you want to access the generated Sources file with B<apt>(8)  "
 "you will probably need to compress the file with B<gzip>(1)  (generating a "
-"Source.gz file). apt ignores uncompressed Sources files except on local "
+"Sources.gz file). apt ignores uncompressed Sources files except on local "
 "access (i.e.  B<file://> sources)."
 msgstr ""
 
