--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-05  Khoem Sokhem  <khoemsokhem@khmeros.info>
+
+	* km.po: Updated to 920t.
+
 2006-09-27  Piarres Beobide  <pi@beobide.net>
 
 	* eu.po: Updated to 920t.
