Update the Spanish translation of dselect

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-05  Javier Fernandez-Sanguino <jfs@debian.org>
+
+	* es.po: Updated to 289t.
+
 2006-09-02  Claus Hindsgaul  <claus.hindsgaul@gmail.com>
 
 	* da.po: Updated to 289t.
