--- a/debian/changelog
+++ b/debian/changelog
@@ -42,6 +42,7 @@ dpkg (1.13.23~) UNRELEASED; urgency=low
   * German (Sven Joachim). Closes: #384843
     (Sven is now the new German translation maintainer for dpkg and dselect.)
   * Danish (Claus Hindsgaul).
+  * Spanish (Javier Fernández-Sanguino Peña).
 
   [ Updated man pages translations ]
   * German (Helge Kreutzmann). Closes: #379030
