Updated Slovak translation for dselect

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-05  Peter Mann  <Peter.Mann@tuke.sk>
+
+	* sk.po: Updated to 289t.
+
 2006-10-05  Javier Fernandez-Sanguino <jfs@debian.org>
 
 	* es.po: Updated to 289t.
