--- a/dselect/po/sk.po
+++ b/dselect/po/sk.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-05-03 11:56+0300\n"
-"PO-Revision-Date: 2006-02-17 08:58+0200\n"
+"PO-Revision-Date: 2006-10-05 20:44+0200\n"
 "Last-Translator: Peter Mann <Peter.Mann@tuke.sk>\n"
 "Language-Team: Slovak <sk-i18n@lists.linux.sk>\n"
 "MIME-Version: 1.0\n"
@@ -885,9 +885,11 @@ msgid ""
 "Usage: %s [<option> ...] [<action> ...]\n"
 "\n"
 msgstr ""
+"Použitie: %s [<voľba> ...] [<akcia> ...]\n"
+"\n"
 
 #: dselect/main.cc:175
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --admindir <directory>     Use <directory> instead of %s.\n"
@@ -897,8 +899,6 @@ msgid ""
 "                             Configure screen colours.\n"
 "\n"
 msgstr ""
-"Použitie: %s [<voľba> ...] [<akcia> ...]\n"
-"\n"
 "Voľby:\n"
 "  --admindir <adresár>         Použije <adresár> namiesto %s.\n"
 "  --expert                     Režim pre skúsených používateľov.\n"
@@ -906,12 +906,6 @@ msgstr ""
 "<súbor>.\n"
 "  --colour | --color screenpart:[foreground],[background][:attr[+attr+..]]\n"
 "                               Nastaví farby obrazovky.\n"
-"  --help                       Zobrazí túto nápovedu.\n"
-"  --version                    Zobrazí číslo verzie.\n"
-"  --license                    Zobrazí licenciu.\n"
-"\n"
-"Akcie:\n"
-"  access update select install config remove quit\n"
 "\n"
 
 #: dselect/main.cc:184
@@ -922,6 +916,10 @@ msgid ""
 "  --license | --licence      Show the license.\n"
 "\n"
 msgstr ""
+"  --help                       Zobrazí túto nápovedu.\n"
+"  --version                    Zobrazí číslo verzie.\n"
+"  --license | --licence        Zobrazí licenciu.\n"
+"\n"
 
 #: dselect/main.cc:190
 #, c-format
@@ -930,6 +928,9 @@ msgid ""
 "  access update select install config remove quit\n"
 "\n"
 msgstr ""
+"Akcie:\n"
+"  access update select install config remove quit\n"
+"\n"
 
 #: dselect/main.cc:194
 #, c-format
