hu trunk: dpkg, dselect, man updates

--- a/dselect/po/hu.po
+++ b/dselect/po/hu.po
@@ -3,14 +3,15 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2006-05-03 11:56+0300\n"
-"PO-Revision-Date: 2006-02-19 09:31+0100\n"
-"Last-Translator: SZERVÑC Attila <sas@321.hu>\n"
-"Language-Team: hu\n"
+"PO-Revision-Date: 2006-10-06 03:48+0100\n"
+"Last-Translator: SZERVÁC Attila <sas@321.hu>\n"
+"Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Language: Hungarian\n"
 "X-Poedit-Country: HUNGARY\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
 #: dselect/basecmds.cc:121
 msgid "Search for ? "
@@ -26,7 +27,7 @@ msgstr "Súgó:"
 
 #: dselect/basecmds.cc:177
 msgid "Press ? for help menu, . for next topic, <space> to exit help."
-msgstr "A ? súgómenüt ad, a . lép, a <space> kilép a súgóból."
+msgstr "A ? súgó menüjét adja, a . lép, a <space> kilép a súgóból."
 
 #: dselect/basecmds.cc:184
 msgid "Help information is available under the following topics:"
@@ -37,20 +38,20 @@ msgid ""
 "Press a key from the list above, <space> or `q' to exit help,\n"
 "  or `.' (full stop) to read each help page in turn. "
 msgstr ""
-"Üss le egy billentyűt a fentiekből, <space> vagy `q a kilépés,\n"
-"  a `.' egymás után olvassa a súgólapokat."
+"Üss le egy billentyűt a fentiekből, <space> vagy `q' a kilépés,\n"
+"  a `.' egymás után olvassa a súgó lapjait."
 
 #: dselect/basecmds.cc:198
 msgid "error reading keyboard in help"
-msgstr ""
+msgstr "hiba a billentyűzet olvasásakor a súgóban"
 
 #: dselect/baselist.cc:57
 msgid "ioctl(TIOCGWINSZ) failed"
-msgstr ""
+msgstr "ioctl(TIOCGWINSZ) sikertelen"
 
 #: dselect/baselist.cc:60
 msgid "doupdate in SIGWINCH handler failed"
-msgstr ""
+msgstr "doupdate a SIGWINCH kezelőben sikertelen"
 
 #: dselect/baselist.cc:67
 msgid "failed to restore old SIGWINCH sigact"
@@ -233,7 +234,7 @@ msgstr ""
 
 #: dselect/bindings.cc:151
 msgid "Search for a package whose name contains a string"
-msgstr "Keresés a csomagnevekben"
+msgstr "Keresés a csomagok neveiben"
 
 #: dselect/bindings.cc:152
 msgid "Repeat last search."
@@ -249,7 +250,7 @@ msgstr "Kilépés, megerősítés és függőségek ellenőrzése"
 
 #: dselect/bindings.cc:155
 msgid "Quit, confirming without check"
-msgstr "Kilépés, megerősítés ellenőrzés nélkü"
+msgstr "Kilépés, megerősítés ellenőrzés nélkül"
 
 #: dselect/bindings.cc:156
 msgid "Quit, rejecting conflict/dependency suggestions"
@@ -297,21 +298,15 @@ msgid ""
 "\n"
 "Mark packages for later processing:\n"
 " +, Insert  install or upgrade      =, H  hold in present state\n"
-" -, Delete  remove                  :, G  unhold: upgrade or leave "
-"uninstalled\n"
+" -, Delete  remove                  :, G  unhold: upgrade or leave uninstalled\n"
 " _          remove & purge config\n"
 "                                             Miscellaneous:\n"
-"Quit, exit, overwrite (note capitals!):       ?, F1 request help (also "
-"Help)\n"
-" Return  Confirm, quit (check dependencies)   i, I  toggle/cycle info "
-"displays\n"
-"   Q     Confirm, quit (override dep.s)       o, O  cycle through sort "
-"options\n"
-" X, Esc  eXit, abandoning any changes made    v, V  change status display "
-"opts\n"
+"Quit, exit, overwrite (note capitals!):       ?, F1 request help (also Help)\n"
+" Return  Confirm, quit (check dependencies)   i, I  toggle/cycle info displays\n"
+"   Q     Confirm, quit (override dep.s)       o, O  cycle through sort options\n"
+" X, Esc  eXit, abandoning any changes made    v, V  change status display opts\n"
 "   R     Revert to state before this list      ^l   redraw display\n"
-"   U     set all to sUggested state             /   search (Return to "
-"cancel)\n"
+"   U     set all to sUggested state             /   search (Return to cancel)\n"
 "   D     set all to Directly requested state  n, \\  repeat last search\n"
 msgstr ""
 
@@ -323,27 +318,21 @@ msgstr "Bevezetés a csomagválasztásba"
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
-"You will be presented with a list of packages which are installed or "
-"available\n"
+"You will be presented with a list of packages which are installed or available\n"
 "for installation.  You can navigate around the list using the cursor keys,\n"
 "mark packages for installation (using `+') or deinstallation (using `-').\n"
-"Packages can be marked either singly or in groups; initially you will see "
-"that\n"
-"the line `All packages' is selected.  `+', `-' and so on will affect all "
-"the\n"
+"Packages can be marked either singly or in groups; initially you will see that\n"
+"the line `All packages' is selected.  `+', `-' and so on will affect all the\n"
 "packages described by the highlighted line.\n"
 "\n"
-"Some of your choices will cause conflicts or dependency problems; you will "
-"be\n"
-"given a sub-list of the relevant packages, so that you can solve the "
-"problems.\n"
+"Some of your choices will cause conflicts or dependency problems; you will be\n"
+"given a sub-list of the relevant packages, so that you can solve the problems.\n"
 "\n"
 "You should read the list of keys and the explanations of the display.\n"
 "Much on-line help is available, please make use of it - press `?' at\n"
 "any time for help.\n"
 "\n"
-"When you have finished selecting packages, press <enter> to confirm "
-"changes,\n"
+"When you have finished selecting packages, press <enter> to confirm changes,\n"
 "or `X' to quit without saving changes. A final check on conflicts and\n"
 "dependencies will be done - here too you may see a sublist.\n"
 "\n"
@@ -365,8 +354,7 @@ msgstr ""
 "Több Súgó is elérhető, használd bátran ezeket! - mindig üsd le a `?'-et\n"
 "a segítségért.\n"
 "\n"
-"A csomagkijelölés végeztével, üsd le az <enter>-t a változások "
-"megerősítéséhez,\n"
+"A csomagkijelölés végeztével, üsd le az <enter>-t a változások megerősítéséhez,\n"
 "vagy az `X'-et a változások mentése nélküli kilépéshez. Az ütközések és\n"
 "függőségek végső ellenőrzése megtörténik - ismét egy listát kapsz.\n"
 "Üsd le a <szóköz> billentyűt a súgó elhagyásához és lépj be a listába most!\n"
@@ -379,12 +367,10 @@ msgstr "Bevezetés a csak-olvasható csomag lista böngészésbe"
 msgid ""
 "Welcome to dselect's main package listing.\n"
 "\n"
-"You will be presented with a list of packages which are installed or "
-"available\n"
+"You will be presented with a list of packages which are installed or available\n"
 "for installation.  Since you do not have the privilege necessary to update\n"
 "package states, you are in a read-only mode.  You can navigate around the\n"
-"list using the cursor keys (please see the `Keystrokes' help screen), "
-"observe\n"
+"list using the cursor keys (please see the `Keystrokes' help screen), observe\n"
 "the status of the packages and read information about them.\n"
 "\n"
 "You should read the list of keys and the explanations of the display.\n"
@@ -420,34 +406,25 @@ msgid ""
 "Dependency/conflict resolution - introduction.\n"
 "\n"
 "One or more of your choices have raised a conflict or dependency problem -\n"
-"some packages should only be installed in conjunction with certain others, "
-"and\n"
+"some packages should only be installed in conjunction with certain others, and\n"
 "some combinations of packages may not be installed together.\n"
 "\n"
-"You will see a sub-list containing the packages involved.  The bottom half "
-"of\n"
-"the display shows relevant conflicts and dependencies; use `i' to cycle "
-"between\n"
+"You will see a sub-list containing the packages involved.  The bottom half of\n"
+"the display shows relevant conflicts and dependencies; use `i' to cycle between\n"
 "that, the package descriptions and the internal control information.\n"
 "\n"
-"A set of `suggested' packages has been calculated, and the initial markings "
-"in\n"
+"A set of `suggested' packages has been calculated, and the initial markings in\n"
 "this sub-list have been set to match those, so you can just hit Return to\n"
-"accept the suggestions if you wish.  You may abort the change(s) which "
-"caused\n"
+"accept the suggestions if you wish.  You may abort the change(s) which caused\n"
 "the problem(s), and go back to the main list, by pressing capital `X'.\n"
 "\n"
-"You can also move around the list and change the markings so that they are "
-"more\n"
-"like what you want, and you can `reject' my suggestions by using the "
-"capital\n"
-"`D' or `R' keys (see the keybindings help screen).  You can use capital `Q' "
-"to\n"
+"You can also move around the list and change the markings so that they are more\n"
+"like what you want, and you can `reject' my suggestions by using the capital\n"
+"`D' or `R' keys (see the keybindings help screen).  You can use capital `Q' to\n"
 "force me to accept the situation currently displayed, in case you want to\n"
 "override a recommendation or think that the program is mistaken.\n"
 "\n"
-"Press <space> to leave help and enter the sub-list; remember: press `?' for "
-"help.\n"
+"Press <space> to leave help and enter the sub-list; remember: press `?' for help.\n"
 msgstr ""
 
 #: dselect/helpmsgs.cc:100
@@ -456,17 +433,12 @@ msgstr ""
 
 #: dselect/helpmsgs.cc:100
 msgid ""
-"The top half of the screen shows a list of packages.  For each package you "
-"see\n"
-"four columns for its current status on the system and mark.  In terse mode "
-"(use\n"
-"`v' to toggle verbose display) these are single characters, from left to "
-"right:\n"
+"The top half of the screen shows a list of packages.  For each package you see\n"
+"four columns for its current status on the system and mark.  In terse mode (use\n"
+"`v' to toggle verbose display) these are single characters, from left to right:\n"
 "\n"
-" Error flag: Space - no error (but package may be in broken state - see "
-"below)\n"
-"              `R'  - serious error during installation, needs "
-"reinstallation;\n"
+" Error flag: Space - no error (but package may be in broken state - see below)\n"
+"              `R'  - serious error during installation, needs reinstallation;\n"
 " Installed state:   Space - not installed;\n"
 "                     `*'  - installed;\n"
 "                     `-'  - not installed but config files remain;\n"
@@ -482,8 +454,7 @@ msgid ""
 "  `n': package is new and has yet to be marked for install/remove/&c.\n"
 "\n"
 "Also displayed are each package's Priority, Section, name, installed and\n"
-"available version numbers (shift-V to display/hide) and summary "
-"description.\n"
+"available version numbers (shift-V to display/hide) and summary description.\n"
 msgstr ""
 
 #: dselect/helpmsgs.cc:125
@@ -492,14 +463,11 @@ msgstr ""
 
 #: dselect/helpmsgs.cc:125
 msgid ""
-"* Highlight: One line in the package list will be highlighted.  It "
-"indicates\n"
+"* Highlight: One line in the package list will be highlighted.  It indicates\n"
 "  which package(s) will be affected by presses of `+', `-' and `_'.\n"
 "\n"
-"* The dividing line in the middle of the screen shows a brief explanation "
-"of\n"
-"  the status of the currently-highlighted package, or a description of "
-"which\n"
+"* The dividing line in the middle of the screen shows a brief explanation of\n"
+"  the status of the currently-highlighted package, or a description of which\n"
 "  group is highlighted if a group line is.  If you don't understand the\n"
 "  meaning of some of the status characters displayed, go to the relevant\n"
 "  package and look at this divider line, or use the `v' key for a verbose\n"
@@ -523,25 +491,21 @@ msgstr ""
 
 #: dselect/helpmsgs.cc:148
 msgid ""
-"dselect and dpkg can do automatic installation, loading the package files to "
-"be\n"
+"dselect and dpkg can do automatic installation, loading the package files to be\n"
 "installed from one of a number of different possible places.\n"
 "\n"
 "This list allows you to select one of these installation methods.\n"
 "\n"
-"Move the highlight to the method you wish to use, and hit Enter.  You will "
-"then\n"
+"Move the highlight to the method you wish to use, and hit Enter.  You will then\n"
 "be prompted for the information required to do the installation.\n"
 "\n"
 "As you move the highlight a description of each method, where available, is\n"
 "displayed in the bottom half of the screen.\n"
 "\n"
-"If you wish to quit without changing anything use the `x' key while in the "
-"list\n"
+"If you wish to quit without changing anything use the `x' key while in the list\n"
 "of installation methods.\n"
 "\n"
-"A full list of keystrokes is available by pressing `k' now, or from the "
-"help\n"
+"A full list of keystrokes is available by pressing `k' now, or from the help\n"
 "menu reachable by pressing `?'.\n"
 msgstr ""
 
@@ -564,8 +528,7 @@ msgid ""
 "\n"
 "Quit:\n"
 " Return, Enter    select this method and go to its configuration dialogue\n"
-" x, X             exit without changing or setting up the installation "
-"method\n"
+" x, X             exit without changing or setting up the installation method\n"
 "\n"
 "Miscellaneous:\n"
 "  ?, Help, F1      request help\n"
@@ -678,12 +641,8 @@ msgid ""
 "Copyright (C) 1994-1996 Ian Jackson.\n"
 "Copyright (C) 2000,2001 Wichert Akkerman.\n"
 msgstr ""
-"%s verzió.\n"
 "Copyright (C) 1994-1996 Ian Jackson.\n"
 "Copyright (C) 2000,2001 Wichert Akkerman.\n"
-"Ez egy Szabad Szoftver; l. a GNU General Public Licence 2-es vagy nagyobb\n"
-"változatát a másolási feltételekért.  NINCS garancia.\n"
-"L. a dselect --licence parancsot a részletekért.\n"
 
 #: dselect/main.cc:157
 #, c-format
@@ -704,7 +663,7 @@ msgid ""
 msgstr ""
 
 #: dselect/main.cc:175
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --admindir <directory>     Use <directory> instead of %s.\n"
@@ -714,21 +673,12 @@ msgid ""
 "                             Configure screen colours.\n"
 "\n"
 msgstr ""
-"Használat: %s [<opció> ...] [<művelet> ...]\n"
-"\n"
 "Lehetőségek:\n"
-"  --admindir <könyvtár>      Use <directory> instead of %s.\n"
+"  --admindir <könyvtár>      <directory> használata %s helyett.\n"
 "  --expert                   Szakértő mód.\n"
-"  --debug <file> | -D<file>  Hibaellenőrzés, kiemenet küldése ide: <fájl>.\n"
-"  --colour | --color képernyúrész:[előtér],[háttér][:attr[+attr+..]]\n"
+"  --debug <file> | -D<file>  Hibakeresés, kimenet küldése ide: <fájl>.\n"
+"  --colour | --color képernyőrész:[előtér],[háttér][:attr[+attr+..]]\n"
 "                             Képernyőszínek beállítása.\n"
-"  --help                     E súgó megjelenítése.\n"
-"  --version                  Verzió kiírása.\n"
-"  --license                  Licenc kiírása.\n"
-"\n"
-"Műveletek:\n"
-"  elérés frissítés választás telepítés beállítás leszedés kilépés\n"
-"\n"
 
 #: dselect/main.cc:184
 #, c-format
@@ -780,7 +730,8 @@ msgstr "képernyőrész"
 msgid "Null colour specification\n"
 msgstr "nincs szín megadva\n"
 
-#: dselect/main.cc:270 dselect/main.cc:275
+#: dselect/main.cc:270
+#: dselect/main.cc:275
 msgid "colour"
 msgstr "szín"
 
@@ -820,7 +771,7 @@ msgstr ""
 "\n"
 "\n"
 "Mozogj ezekkel: ^P és ^N, kurzor billentyűk, kezdőbetűk vagy számok;\n"
-"Üsd le az <enter>-t a választás megerősítéséhez. A ^L frissíti a képernyőt.\n"
+"Üss <enter>-t a választás megerősítéséhez. A ^L frissíti a képernyőt.\n"
 "\n"
 
 #: dselect/main.cc:417
@@ -840,7 +791,7 @@ msgstr "a főmenü elérése meghiúsult"
 #: dselect/main.cc:509
 #, c-format
 msgid "unknown action string `%.50s'"
-msgstr "ismeretlen művelet sztring %.50s'"
+msgstr "ismeretlen `%.50s' művelet sztring"
 
 #: dselect/methlist.cc:78
 msgid "dselect - list of access methods"
@@ -855,7 +806,8 @@ msgstr "`%s' elérési mód."
 msgid "Abbrev."
 msgstr "Röv."
 
-#: dselect/methlist.cc:122 dselect/pkgtop.cc:297
+#: dselect/methlist.cc:122
+#: dselect/pkgtop.cc:297
 msgid "Description"
 msgstr "Leírás"
 
@@ -875,7 +827,8 @@ msgstr ""
 msgid "getch failed"
 msgstr ""
 
-#: dselect/methlist.cc:177 dselect/pkgdepcon.cc:242
+#: dselect/methlist.cc:177
+#: dselect/pkgdepcon.cc:242
 msgid "[none]"
 msgstr ""
 
@@ -1262,7 +1215,8 @@ msgstr "bUG"
 msgid "?"
 msgstr "?"
 
-#: dselect/pkgdisplay.cc:97 dselect/pkgdisplay.cc:117
+#: dselect/pkgdisplay.cc:97
+#: dselect/pkgdisplay.cc:117
 msgid "Broken"
 msgstr "Törött"
 
@@ -1286,11 +1240,13 @@ msgstr "Naprakész"
 msgid "Available"
 msgstr "Elérhető"
 
-#: dselect/pkgdisplay.cc:103 dselect/pkgdisplay.cc:119
+#: dselect/pkgdisplay.cc:103
+#: dselect/pkgdisplay.cc:119
 msgid "Removed"
 msgstr "Eltávolított"
 
-#: dselect/pkgdisplay.cc:104 dselect/pkgdisplay.cc:113
+#: dselect/pkgdisplay.cc:104
+#: dselect/pkgdisplay.cc:113
 msgid "Brokenly installed packages"
 msgstr "Törötten telepített csomagok"
 
@@ -1374,7 +1330,8 @@ msgstr " (elérh., elsőbbség)"
 msgid " (status, priority)"
 msgstr " (állapot, elsőbbség)"
 
-#: dselect/pkgdisplay.cc:240 dselect/pkgdisplay.cc:252
+#: dselect/pkgdisplay.cc:240
+#: dselect/pkgdisplay.cc:252
 msgid " (alphabetically)"
 msgstr " (abc-ben)"
 
@@ -1404,20 +1361,14 @@ msgstr " hosszú:v súgó:?"
 
 #: dselect/pkginfo.cc:82
 msgid ""
-"The line you have highlighted represents many packages; if you ask to "
-"install, remove, hold, etc. it you will affect all the packages which match "
-"the criterion shown.\n"
+"The line you have highlighted represents many packages; if you ask to install, remove, hold, etc. it you will affect all the packages which match the criterion shown.\n"
 "\n"
-"If you move the highlight to a line for a particular package you will see "
-"information about that package displayed here.\n"
-"You can use `o' and `O' to change the sort order and give yourself the "
-"opportunity to mark packages in different kinds of groups."
+"If you move the highlight to a line for a particular package you will see information about that package displayed here.\n"
+"You can use `o' and `O' to change the sort order and give yourself the opportunity to mark packages in different kinds of groups."
 msgstr ""
-"A sor, amire állsz sok csomagot képvisel; ha telepítesz, eltávolítasz, stb., "
-"az minden mutatott kívánalomnak megfelelő csomagra hat.\n"
+"A sor, amire állsz sok csomagot képvisel; ha telepítesz, eltávolítasz, stb., az minden mutatott kívánalomnak megfelelő csomagra hat.\n"
 "\n"
-"Más a helyzet, ha egy bizonyos csomag sorára állsz, ilyenkor az adott "
-"csomagra látod a lehető legtöbb információt, például a leírását is.\n"
+"Más a helyzet, ha egy bizonyos csomag sorára állsz, ilyenkor az adott csomagra látod a lehető legtöbb információt, például a leírását is.\n"
 "Az `o' vagy `O' billentyűvel a rendezést is válthatod."
 
 #: dselect/pkginfo.cc:96
@@ -1442,27 +1393,28 @@ msgstr "leírás"
 
 #: dselect/pkginfo.cc:132
 msgid "currently installed control info"
-msgstr ""
+msgstr "most telepített ellenőrző adatok"
 
 #: dselect/pkginfo.cc:134
 msgid "installed control info for "
-msgstr ""
+msgstr "telepített ellenőrző adatok ehhez:"
 
 #: dselect/pkginfo.cc:148
 msgid "available version of control file info"
-msgstr ""
+msgstr "ellenőrző fájl elérhető verziója ehhez:"
 
 #: dselect/pkginfo.cc:150
 msgid "available version of control info for "
-msgstr ""
+msgstr "ellenőrző adatok elérhető verziója ehhez:"
 
-#: dselect/pkglist.cc:123 dselect/pkglist.cc:124
+#: dselect/pkglist.cc:123
+#: dselect/pkglist.cc:124
 msgid "<null>"
 msgstr "<null>"
 
 #: dselect/pkglist.cc:507
 msgid "invalid search option given"
-msgstr ""
+msgstr "érvénytelen keresési lehetőség"
 
 #: dselect/pkglist.cc:521
 msgid "error in regular expression"
@@ -1553,3 +1505,4 @@ msgstr "Telep.ver"
 #: dselect/pkgtop.cc:295
 msgid "Avail.ver"
 msgstr "Elérh.ver"
+
