--- a/man/po4a/dpkg.cfg.5/po/hu.po
+++ b/man/po4a/dpkg.cfg.5/po/hu.po
@@ -2,13 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2006-06-20 21:07+0200\n"
-"PO-Revision-Date: 2006-05-27 23:28+0100\n"
-"Language-Team: hu\n"
+"PO-Revision-Date: 2006-10-05 21:15+0100\n"
+"Language-Team: Hungarian\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=iso-8859-2\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-Language: Hungarian\n"
 "X-Poedit-Country: HUNGARY\n"
+"Last-Translator: SZERV√ÅC Attila <sas@321.hu>\n"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg.cfg.5:1
@@ -32,43 +33,35 @@ msgstr "Debian Project"
 #: ../../../man/po4a/../C/dpkg.cfg.5:1
 #, no-wrap
 msgid "dpkg suite"
-msgstr "dpkg kÈszlet"
+msgstr "dpkg k√©szlet"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg.cfg.5:2
 #, no-wrap
 msgid "NAME"
-msgstr "N…V"
+msgstr "N√âV"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.cfg.5:4
 msgid "dpkg.cfg - dpkg configuration file"
-msgstr "dpkg.cfg - dpkg konfigur·ciÛs f·jl"
+msgstr "dpkg.cfg - dpkg konfigur√°ci√≥s f√°jl"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg.cfg.5:5
 #, no-wrap
 msgid "DESCRIPTION"
-msgstr "LEÕR¡S"
+msgstr "LE√çR√ÅS"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.cfg.5:11
-msgid ""
-"This file contains default options for dpkg. Each line contains a single "
-"option which is exactly the same as a normal command line option for dpkg "
-"except for the leading dashes which are not used here. Comments are allowed "
-"by starting a line with a hash sign (\"B<#>\")."
-msgstr ""
-"E f·jl tartalmazza a dpkg alapbe·llÌt·sait. Minden sor 1 lehetısÈget "
-"tartalmaz, mely pontosan megfelel a sima parancssoros dpkg lehetısÈgeknek "
-"kivÈve a vezetı kˆtıjeleket, melyek itt nincsenek. MegjegyzÈsek egy sor "
-"elejÈn a (\"B<#>\") jellel lehetsÈgesek."
+msgid "This file contains default options for dpkg. Each line contains a single option which is exactly the same as a normal command line option for dpkg except for the leading dashes which are not used here. Comments are allowed by starting a line with a hash sign (\"B<#>\")."
+msgstr "E f√°jl tartalmazza a dpkg alapbe√°ll√≠t√°sait. Minden sor 1 lehet≈ës√©get tartalmaz, mely pontosan megfelel a sima parancssoros dpkg lehet≈ës√©geknek kiv√©ve a vezet≈ë k√∂t≈ëjeleket, melyek itt nincsenek. Megjegyz√©sek egy sor elej√©n a (\"B<#>\") jellel lehets√©gesek."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg.cfg.5:12
 #, no-wrap
 msgid "FILES"
-msgstr "F¡JLOK"
+msgstr "F√ÅJLOK"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.cfg.5:14
@@ -84,24 +77,21 @@ msgstr "I<~/.dpkg.cfg>"
 #: ../../../man/po4a/../C/dpkg.cfg.5:17
 #, no-wrap
 msgid "AUTHOR"
-msgstr "SZERZ’"
+msgstr "SZERZ≈ê"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.cfg.5:20
-msgid ""
-"See I</usr/share/doc/dpkg/THANKS> for the list of people who have "
-"contributed to B<dpkg>."
-msgstr ""
-"L·sd a I</usr/share/doc/dpkg/THANKS> f·jlt, melyben a B<dpkg> kÈszÌtÈsÈt "
-"segÌtı szemÈlyek list·ja tal·lhatÛ."
+msgid "See I</usr/share/doc/dpkg/THANKS> for the list of people who have contributed to B<dpkg>."
+msgstr "L√°sd a I</usr/share/doc/dpkg/THANKS> f√°jlt, melyben a B<dpkg> k√©sz√≠t√©s√©t seg√≠t≈ë szem√©lyek list√°ja tal√°lhat√≥."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg.cfg.5:21
 #, no-wrap
 msgid "SEE ALSO"
-msgstr "L¡SD M…G"
+msgstr "L√ÅSD M√âG"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg.cfg.5:22
 msgid "B<dpkg>(1)."
 msgstr "B<dpkg>(1)."
+
