--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-05  SZERVÁC Attila  <sas@321.hu>
+
+	* hu.po: Updated to 748t.
+
 2006-10-05  Khoem Sokhem  <khoemsokhem@khmeros.info>
 
 	* km.po: Updated to 920t.
